<resources>
    <string name="app_name">proFinder</string>
    <string name="label_telalogin">Login</string>
    <string name="label_telacadastro">Cadastre-se</string>
    <string name="splash_descricao">Splash Screen Background</string>
    <string name="loginbackground">Background da Tela de Login</string>
    <string name="telacadastrousuario">Background tela cadastro de usuário</string>
    <string name="username">Usuário</string>
    <string name="password">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="cadastre_se"><u>Não tem uma conta? Faça uma agora mesmo!</u></string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="senha_novamente">Repita sua senha</string>
    <string name="title_activity_professor">Professor</string>
    <string name="title_activity_Aluno">Aluno</string>
    <string name="vagas">%2$d/50 Vagas</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
