<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="profinder.com.br.profinderproject.LoginActivity">

    <ImageView
        android:id="@+id/loginbackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/loginbackground"
        android:scaleType="fitEnd"
        app:srcCompat="@drawable/loginbackground" />

    <TextView
        android:id="@+id/loginappname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="72sp" />

    <EditText
        android:id="@+id/username_login"
        android:layout_width="324dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/username"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="211dp" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/username_login"
        android:layout_below="@+id/username_login"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="274dp" />

    <Button
        android:id="@+id/entrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@color/Peru"
        android:fontFamily="@font/roboto_light"
        android:text="@string/entrar"
        android:textColor="@color/GhostWhite"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="360dp" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/entrar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:fontFamily="@font/roboto_light"
        android:text="@string/cadastre_se"
        android:textColor="@color/black" />


</RelativeLayout>
